# qtfingerprint

./: .gitignore  .gitmodules  ANDROID_LIBFPRINT_PORT.md  BUILD_ANDROID.md  CMakeLists.txt  CMakeLists_poc.txt  README.md  android-ndk-cross-file-arm64-v8a.txt  android-ndk-cross-file.txt  android_exe_wrapper.sh  backend_client.cpp  backend_client.h  backend_config_dialog.cpp  backend_config_dialog.h  build.sh  build_dependencies.sh  build_dependencies_android.sh  build_libfprint_android.sh  build_libfprint_android_complete.sh  build_linux.sh  build_mac.sh  build_qt_android.sh  check_android_dependencies.sh  database_config_dialog.cpp  database_config_dialog.h  database_manager.cpp  database_manager.h  entitlements.plist  fingerprint_app.pro  fingerprint_manager.h  fingerprint_poc.pro  fingerprint_utils.cpp  fingerprint_utils.h  identification_dialog.cpp  identification_dialog.h  main_app.cpp  main_poc.cpp  mainwindow_app.cpp  mainwindow_app.h  mainwindow_new.cpp  (+10 more)
android/: AndroidManifest.xml  build.gradle  gradle.properties
android-ndk-prefix/include/libfprint-2/: fp-context.h
android-ndk-prefix/include/openssl/: configuration.h
android-ndk-prefix/lib/pkgconfig/: gio-2.0.pc  gio-unix-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  gusb.pc  json-glib-1.0.pc  libcrypto.pc  libffi.pc  libfprint-2.pc  libpcre2-16.pc  libpcre2-32.pc  libpcre2-8.pc  libssl.pc  libusb-1.0.pc  openssl.pc
android-ndk-prefix/libexec/: gio-launch-desktop
android-poc/: COMPLETE.md  INSTALL_TABLET.md  QUICK_START.md  README.md  RUN_EMULATOR.md  SETUP.md  UI_DESIGN.md  UI_SCREENSHOT.md  USB_PASSTHROUGH.md  USB_PASSTHROUGH_MACOS.md  check_usb_device.sh  install_to_tablet.sh  monitor_logs.sh  run_emulator.sh  run_emulator_with_usb.sh  settings.gradle.kts
android-poc/app/: build.gradle.kts  proguard-rules.pro
android-poc/gradle/: libs.versions.toml
android-poc/gradle/wrapper/: gradle-wrapper.properties
android/res/values/: strings.xml
build-android-arm64-v8a/json-glib/po/: pt.po
build-android-arm64-v8a/libffi/aarch64-unknown-linux-android/: config.status  fficonfig.h  libffi.la  libffi.pc  libffi_convenience.la  libtool  local.exp
build-android-arm64-v8a/libgusb/: meson.build
build-android-arm64-v8a/libgusb/gusb/: gusb-context.c  gusb-device.c  meson.build
build-android-arm64-v8a/libusb/: config.h  config.status  libtool  libusb-1.0.pc
build-android-arm64-v8a/libusb/libusb/: descriptor.lo  hotplug.lo  io.lo  libusb-1.0.la  strerror.lo  sync.lo
build-android-arm64-v8a/openssl/: Makefile.in  configdata.pm  libcrypto.pc  libssl.pc  openssl.pc
build-android-arm64-v8a/openssl/apps/: openssl  openssl-bin-asn1parse.d  openssl-bin-ca.d  openssl-bin-ciphers.d  openssl-bin-cmp.d  openssl-bin-cms.d  openssl-bin-crl.d  openssl-bin-crl2pkcs7.d  openssl-bin-dgst.d  openssl-bin-dhparam.d  openssl-bin-dsa.d  openssl-bin-dsaparam.d  openssl-bin-ec.d  openssl-bin-ecparam.d  openssl-bin-enc.d  openssl-bin-engine.d  openssl-bin-errstr.d  openssl-bin-fipsinstall.d  openssl-bin-gendsa.d  openssl-bin-genpkey.d  openssl-bin-genrsa.d  openssl-bin-info.d  openssl-bin-kdf.d  openssl-bin-list.d  openssl-bin-mac.d  openssl-bin-nseq.d  openssl-bin-ocsp.d  openssl-bin-openssl.d  openssl-bin-passwd.d  openssl-bin-pkcs12.d  openssl-bin-pkcs7.d  openssl-bin-pkcs8.d  openssl-bin-pkey.d  openssl-bin-pkeyparam.d  openssl-bin-pkeyutl.d  openssl-bin-prime.d  openssl-bin-progs.d  openssl-bin-rand.d  openssl-bin-rehash.d  openssl-bin-req.d  (+15 more)
build-android-arm64-v8a/openssl/crypto/: buildinf.h  legacy-dso-cpuid.d  legacy-dso-ctype.d  libcrypto-lib-mem.d  (+108 more)
build-android-arm64-v8a/pixman/: config.h  config.status  libtool  pixman-1.pc
digitalpersonalib/: .gitignore  API.md  API_REFERENCE.md  INSTALL.md  README.md  USAGE.md  digitalpersonalib.pro
digitalpersonalib/examples/: simple_enrollment.cpp  simple_verification.cpp
digitalpersonalib/include/: database_manager.h  digitalpersona.h  digitalpersona_global.h  fingerprint_manager.h
digitalpersonalib/src/: database_manager.cpp  fingerprint_manager.cpp
fingerprint-sdk/: .gitignore  README.md
fingerprint-sdk/android-wrapper/: README.md  build.gradle.kts  settings.gradle.kts
fingerprint-sdk/android-wrapper/src/main/cpp/: CMakeLists.txt  arkana_fprint.cpp  fingerprint_capture.cpp  fingerprint_capture.h
fingerprint-sdk/backend/: .env  Cargo.toml  README.md  setup_db.ps1  setup_db.sh  setup_db.sql
fingerprint-sdk/backend/migrations/mysql/: 000_create_users.sql  001_create_fingerprints.sql  002_create_auth_logs.sql  003_create_indexes.sql
fingerprint-sdk/backend/migrations/postgresql/: 000_create_users.sql  001_create_fingerprints.sql  002_create_auth_logs.sql  003_create_indexes.sql
fingerprint-sdk/backend/src/: database.rs  handlers.rs  lib.rs  main.rs  models.rs
fingerprint-sdk/backend/tests/: api_tests.rs
fingerprint-sdk/backend/tests/common/: mod.rs
fingerprint-sdk/docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKEND_API.md  BUILD.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md  TROUBLESHOOTING.md  USAGE.md
fingerprint-sdk/examples/: BasicUsage.kt
fingerprint-sdk/rust-jni/: README.md
fingerprint-sdk/rust-jni/rust-service/: Cargo.toml
fingerprint-sdk/rust-jni/rust-service/src/: error.rs  fingerprint.rs  lib.rs  template.rs  usb.rs
libdigitalpersona/: ANDROID_MIGRATION.md  settings.gradle.kts
libdigitalpersona/app/: build.gradle.kts
libdigitalpersona/app/src/main/cpp/: CMakeLists.txt  fingerprint_capture.cpp  fingerprint_capture.h  fingerprint_manager_android.cpp  fingerprint_manager_android.h  native-lib.cpp  test_libfprint_integration.cpp
middleware/rust-api/: .env  .gitignore  Cargo.toml  LIBFPRINT_INTEGRATION.md  README.md  build.rs
middleware/rust-api/libfprint-wrapper/: wrapper.c  wrapper.h
middleware/rust-api/src/: database.rs  fp3_parser.rs  handlers.rs  image_compare.rs  libfprint_wrapper.rs  main.rs  minutiae_match.rs  models.rs
migrations/postgresql/: 001_init.sql  002_add_updated_at.sql
migrations/sqlite/: 001_init.sql  002_add_updated_at.sql
(+1948 files in other folders)
