[package]
name = "fingerprint-sdk-service"
version = "1.0.0"
edition = "2021"

[lib]
name = "fingerprint_sdk_service"
crate-type = ["cdylib", "rlib"]

[dependencies]
# JNI bindings
jni = "0.21"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for backend API
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

[build-dependencies]
# JNI bindings for build
jni = "0.21"

